refactorings for codegen, other refactorings.
refactorings for codegen, other refactorings.